--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,9 +12,6 @@
   <main>
     <div id="topHeader" class="header">
       <div id="welcome">
-        <script type="text/template" id="headerName-template">
-          <div id="userName"><%= name %></div>
-        </script>
       </div>
       <div id="logo"><img src="https://i.imgur.com/E5WguAz.png"></div>
       <div><a id="logout" href="/logout">Logout</a></div>
@@ -28,13 +25,6 @@
     <div id="content">
       <div id="circleHead">
         <div id="circlePrompt">
-        <script type="text/template" id="circlePrompt-template">
-          <% if (userCircles.length > 0) { %>
-            <h1>Select or <a id="createCircleLink" href="#">create a circle</a></h1>
-          <% } else { %>
-            <h1><a id="createCircleLink" href="#">create a circle</a></h1>
-          <% } %>
-        </script>
         </div>
         <div id="createCircleArea">
           <div id="createCircleForm">
@@ -50,30 +40,7 @@
           </div>
         </div>
         <div id="circlesList">
-          <script type="text/template" id="circle-template">
-            <% if (userCircles.length > 0) { %>
-            <% userCircles.forEach(function(circle){ %>
-              <div class="circle">
-                <div class="circleHeader">
-                  <div class="circleTitle"><%= circle.title %></div>
-                </div>
-                <div data-indexNumber="<%= circle._id %>" class="playButton stationLink"><img src="https://i.imgur.com/ODkyHmb.png"></div>
-                <div class="circleMembers">
-                  <% circle.users.forEach(function(user){ %>
-                    <div class="circleMember">
-                      <div class="circleMemberImage"><img src="https://i.imgur.com/NRhYDQD.png"></div>
-                      <div class="circleMemberName"><%= user.spotifyId %>
-                        <div>Name</div>
-                      </div>
-                      <div class="circleMemberDelete"><img src="https://i.imgur.com/OwlzNxO.png"></div>
-                    </div>
-                  <% }) %>
-               </div>
-                <div data-indexNumber="<%= circle._id %>" class="deleteCircle"><img src="https://i.imgur.com/OwlzNxO.png"><div>DELETE CIRCLE</div></div>
-              </div>
-            <% }) %>
-          <% } %>
-        </script>
+
         </div>
       </div>
   </main>
@@ -103,6 +70,7 @@
 
 
   <$- include('partials/scripts') $>
+  <$- include('partials/template') $>
   </body>
 
 </html>
