adds playlist-modify-public/private to spotify api scope; temporary 'save playlist' button in ui

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -451,3 +451,17 @@ button:hover {
   width: 380px;
 }
 
+#playlistDest {
+  display: flex;
+}
+
+iframe {
+  /*width: 100vw;*/
+  flex-grow: 3;
+}
+
+.savePlaylist {
+  flex-grow: 1;
+  height: 100px;
+  background: red;
+}
