--- a/views/index.ejs
+++ b/views/index.ejs
@@ -63,7 +63,7 @@
                 <div class="circleHeader">
                   <div class="circleTitle"><p><%= circle.title %><p></div>
                 </div>
-                <div data-indexNumber="<%= circle._id %>" class="playButton stationLink"><img src="https://i.imgur.com/ODkyHmb.png"></div>
+                <div data-indexNumber="<%= circle._id %>" data-title="<%= circle.title %>" class="playButton stationLink"><img src="https://i.imgur.com/ODkyHmb.png"></div>
                 <div class="circleMembers">
                   <% circle.users.forEach(function(user){ %>
                     <div class="circleMember">
