--- a/public/css/main.css
+++ b/public/css/main.css
@@ -453,16 +453,19 @@ button:hover {
 
 #playlistDest {
   display: flex;
+  position: relative;
 }
 
 iframe {
   /*width: 100vw;*/
-  flex-grow: 3;
+  flex-grow: 4;
 }
 
 #savePlaylist {
   flex-grow: 1;
-  height: 100px;
-  background: green;
+  height: 80px;
+  background: #0387a4;
   cursor: pointer;
+  padding: 0;
+  margin: 0;
 }
