integrates phil's changes for saving a circle; api route created to populate a user's circles

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,9 +11,7 @@
   <main>
     <div id="topHeader" class="header">
       <div id="welcome">
-        <script type="text/template" id="headerName-template">
-          <div id="userName"><p><%= user.spotifyId %></p></div>
-        </script>
+        <div id="userName"><p><$= user.displayName $></p></div>
       </div>
       <div id="logoContainer"><img id="logo" src="https://i.imgur.com/E5WguAz.png"></div>
       <div id="moreInfo">
@@ -34,13 +32,11 @@
     <div id="content">
       <div id="circleHead">
         <div id="circlePrompt">
-        <script type="text/template" id="circlePrompt-template">
-          <% if (userCircles.length > 0) { %>
+          <$ if (user.circles.length > 0) { $>
             <p>select or <a id="createCircleLink" href="#">create a circle</a></p>
-          <% } else { %>
+          <$ } else { $>
             <h1><a id="createCircleLink" href="#">create a circle</a></h1>
-          <% } %>
-        </script>
+          <$ } $>
         </div>
         <div id="createCircleArea">
           <div id="createCircleForm">
@@ -56,38 +52,7 @@
           </div>
         </div>
         <div id="circlesList">
-          <script type="text/template" id="circle-template">
-            <% if (userCircles.length > 0) { %>
-            <% userCircles.forEach(function(circle){ %>
-              <div class="circle">
-                <div class="circleHeader">
-                  <div class="circleTitle"><p><%= circle.title %><p></div>
-                </div>
-                <div data-indexNumber="<%= circle._id %>" data-title="<%= circle.title %>" class="playButton stationLink"><img src="https://i.imgur.com/ODkyHmb.png"></div>
-                <div class="circleMembers">
-                  <% circle.users.forEach(function(user){ %>
-                    <div class="circleMember">
-                      <div class="circleMemberImage"><img src="https://i.imgur.com/NRhYDQD.png"></div>
-                    </div>
-                  <% }) %>
-                </div>
-                <div class="circleMembersExpanded">
-                  <% circle.users.forEach(function(user){ %>
-                    <div class="circleMemberExpanded">
-                      <div class="circleMemberImage"><img src="https://i.imgur.com/NRhYDQD.png"></div>
-                      <div class="circleMemberName">Name<%= user.spotifyId %></div>
-                      <div class="circleMemberDelete"><img src="https://i.imgur.com/OwlzNxO.png"></div>
-                    </div>
-                  <% }) %>
-                  <div data-indexNumber="<%= circle._id %>" class="deleteCircle">
-                    <img class="deleteX" src="https://i.imgur.com/OwlzNxO.png">
-                    <div class="deleteText">DELETE CIRCLE</div>
-                  </div>
-                </div>
-              </div>
-            <% }) %>
-          <% } %>
-        </script>
+
         </div>
       </div>
   </main>
